# qb-trading-system

./: .env.development  .env.example  .env_example  .gitignore  DOCKER_TRADING_GUIDE.md  README.md  TOMORROW_CHECKLIST.md  TRADING_TEST_GUIDE.md  conda_requirements.txt  docker_start.bat  docker_start.sh  main.py  pyproject.toml  quick_benchmark.csv  quick_start.sh  requirements.txt  run.py  run_live_trading.py  run_offline_test.py  test_after_market.sh
.claude/: CLAUDE.md
.cursor/rules/: qb_trading_rules.mdc
.taskmaster/: state.json
.taskmaster/docs/: architecture_design.md  prd.txt
.taskmaster/tasks/: tasks.json
config/: config.yaml  logging.yaml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: KIS_AutoTrading_MVP_Plan.md  Phase1_1_ProjectSetup_Detailed.md  Phase1_2_KISAuth_Detailed.md  TODO_KIS_AutoTrading.md  WebSocket_Handler_Guide.md
examples/: api_monitor_dashboard.py  kis_api_wrapper_test.py  trading_mode_switch.py  websocket_example.py
qb/analysis/: __init__.py  cache_manager.py  custom_indicators.py  indicators.py  performance.py  technical_analyzer.py
qb/collectors/: __init__.py  kis_client.py
qb/database/: connection.py  models.py
qb/docs/: developer-guide.md  development-environment-setup.md  event-bus-system.md  redis-data-structures.md  task-21.5-redis-monitoring-development-report.md  task-23-data-collector-engine.md  task-25-strategy-engine-architecture.md  user-guide.md  (+4 more)
scripts/: __init__.py  init-db.sql  run_live_trading.py
strategies/: __init__.py  example_strategy.py
tests/: __init__.py  benchmark_serialization.py  debug_event_bus.py  enhanced_mock_test.py  kis_client_test.py  mock_kis_adapter.py  quick_test.py  test_api_monitor.py  test_data_collector_engine.py  test_database_connection.py  test_event_bus.py  test_event_bus_integration.py  test_event_bus_simple.py  test_full_trading_integration.py  test_integration.py  test_kis_client_trading_mode.py  test_mock_adapter_basic.py  test_mock_kis_flow.py  test_offline_system_integration.py  test_order_engine_integration.py  test_order_engine_robust.py  test_order_engine_simple.py  test_order_engine_unit.py  test_real_event_bus_flow.py  test_redis_monitor.py  test_risk_engine.py  test_serialization.py  test_simple_orm.py  test_strategy_engine_integration.py  test_trading_mode.py
tools/: README.md  clean_test_realtime.py  event_simulator.py  live_monitor.py  log_formatter.py  quick_debug.py  run_simulation_test.py  test_realtime_sell.py
(+104 files in other folders)
